feat: Implement new logo and update project metadata
Introduces a new SVG logo component with gradient and glow effects. Updates meta tags in `index.html` for improved SEO and social sharing, including dynamic favicon generation. Refactors `Navbar` and `Footer` components to integrate the new `Logo` component and apply subtle visual enhancements.

Adjusts dependencies and devDependencies in `package.json` to align with current project setup. Updates Vite configuration to streamline environment variable handling and removes unnecessary path aliases. Modifies `tsconfig.json` to use modern TypeScript configurations.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#020617" />
+    <meta name="description" content="SYS Studios is a premium web development agency building custom websites and digital solutions. Tailored software services for business growth." />
+    <meta name="keywords" content="web development, freelance agency, react development, custom websites, app development, SYS Studios" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sys.studio/" />
+    <meta property="og:title" content="SYS Studios | Digital Excellence" />
+    <meta property="og:description" content="We build digital empires. Custom web solutions tailored to your business." />
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="SYS Studios | Digital Excellence" />
+    <meta property="twitter:description" content="We build digital empires. Custom web solutions tailored to your business." />
+
+    <!-- Dynamic Favicon (SVG) -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><defs><linearGradient id=%22g%22 x1=%220%25%22 y1=%220%25%22 x2=%22100%25%22 y2=%22100%25%22><stop offset=%220%25%22 stop-color=%22%230ea5e9%22/><stop offset=%22100%25%22 stop-color=%22%238b5cf6%22/></linearGradient></defs><path d=%22M30 35 C 30 20, 70 20, 70 35 C 70 50, 30 50, 30 65 C 30 80, 70 80, 70 65%22 stroke=%22url(%23g)%22 stroke-width=%2212%22 stroke-linecap=%22round%22 fill=%22none%22/></svg>">
+
     <title>SYS Studios | Digital Excellence</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -158,19 +176,22 @@
         border-color: rgba(255,255,255,0.1);
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
+    "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.0"
+    "recharts": "https://aistudiocdn.com/recharts@^3.5.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
